docs/refs/script-api/server/1.13.0/worldbeforeevents.md
# `WorldBeforeEvents`

> 文档版本：1.21.50.25

`WorldBeforeEvents`类。script_api.@minecraft/server.worldbeforeevents.description

## 属性

/// define
`effectAdd`


///

```js
read-only effectAdd: EffectAddBeforeEventSignal;
```

/// html | div.result
//// define
`effectAdd`：[`EffectAddBeforeEventSignal`](./effectaddbeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.effectadd.description


////

///


/// define
`entityRemove`


///

```js
read-only entityRemove: EntityRemoveBeforeEventSignal;
```

/// html | div.result
//// define
`entityRemove`：[`EntityRemoveBeforeEventSignal`](./entityremovebeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.entityremove.description


////

///


/// define
`explosion`


///

```js
read-only explosion: ExplosionBeforeEventSignal;
```

/// html | div.result
//// define
`explosion`：[`ExplosionBeforeEventSignal`](./explosionbeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.explosion.description


////

///


/// define
`itemUse`


///

```js
read-only itemUse: ItemUseBeforeEventSignal;
```

/// html | div.result
//// define
`itemUse`：[`ItemUseBeforeEventSignal`](./itemusebeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.itemuse.description


////

///


/// define
`itemUseOn`


///

```js
read-only itemUseOn: ItemUseOnBeforeEventSignal;
```

/// html | div.result
//// define
`itemUseOn`：[`ItemUseOnBeforeEventSignal`](./itemuseonbeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.itemuseon.description


////

///


/// define
`playerBreakBlock`


///

```js
read-only playerBreakBlock: PlayerBreakBlockBeforeEventSignal;
```

/// html | div.result
//// define
`playerBreakBlock`：[`PlayerBreakBlockBeforeEventSignal`](./playerbreakblockbeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.playerbreakblock.description


////

///


/// define
`playerGameModeChange`


///

```js
read-only playerGameModeChange: PlayerGameModeChangeBeforeEventSignal;
```

/// html | div.result
//// define
`playerGameModeChange`：[`PlayerGameModeChangeBeforeEventSignal`](./playergamemodechangebeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.playergamemodechange.description


////

///


/// define
`playerLeave`


///

```js
read-only playerLeave: PlayerLeaveBeforeEventSignal;
```

/// html | div.result
//// define
`playerLeave`：[`PlayerLeaveBeforeEventSignal`](./playerleavebeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.playerleave.description


////

///


/// define
`weatherChange`


///

```js
read-only weatherChange: WeatherChangeBeforeEventSignal;
```

/// html | div.result
//// define
`weatherChange`：[`WeatherChangeBeforeEventSignal`](./weatherchangebeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.weatherchange.description


////

///


/// define
`worldInitialize`


///

```js
read-only worldInitialize: WorldInitializeBeforeEventSignal;
```

/// html | div.result
//// define
`worldInitialize`：[`WorldInitializeBeforeEventSignal`](./worldinitializebeforeeventsignal.md)

- script_api.@minecraft/server.worldbeforeevents.worldinitialize.description


////

///

